# way_points_manager

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: sample.yaml
launch/: sample.launch
scripts/: node.py
src/way_points_manager/: way_points_manager.py
